# pozorni-translater

./: .gitignore  README.md  config.json  interface.py  listen.py  multiprocessing.py  process_manager.py  pyproject.toml  requesting_to_online_translators.py  requirements.txt  settings.py  translate.py  translator.py  utils.py
