[project]
name = "pozorni-translater"
version = "0.7.2"
description = "Pozorni-translater is a cross-platform real-time speech translator supporting 17 languages, outputting audio through speakers or a virtual microphone."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coqui-tts>=0.24.3",
    "dearpygui>=2.0.0",
    "deep-translator>=1.11.4",
    "googletrans>=4.0.2",
    "pyaudio>=0.2.14",
    "speechrecognition>=3.14.1",
]
